# C1_Coursework_Package_Cython

./: .gitignore  README.md  dual_autodiff_x.md  pyproject.toml  setup.py  strings.py
docs/: conf.py  dual_autodiff_x.ipynb  index.rst  spelling_wordlist.txt
docs/_build/doctrees/: dual_autodiff_x.doctree  environment.pickle  index.doctree
docs/_build/doctrees/source/: dual_autodiff.doctree  modules.doctree
docs/_build/html/: .buildinfo  dual_autodiff_x.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/dual_autodiff/: dual.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/source/: dual_autodiff.rst.txt
docs/_build/html/_static/: documentation_options.js
docs/_build/html/source/: dual_autodiff.html  modules.html
docs/source/: modules.rst
src/dual_autodiff_x/: dual.pyx
tests/: test_dualx.py
wheel_contents/dual_autodiff_x/: version.py
wheel_contents/dual_autodiff_x-0.0.1b2.dist-info/: METADATA  RECORD
wheelhouse/: dual_autodiff_x-0.0.1b2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  dual_autodiff_x-0.0.1b2-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
