[build-system]
requires = ["setuptools", "Cython", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dual_autodiff_x"
version = "0.0.1b2"
description = "A Cythonized version of dual_autodiff"
authors = [
    { name="Your Name", email="you@example.com" }
]
readme = "README.md"
license = {text="MIT"}
requires-python = ">=3.7"

[tool.setuptools]
package-dir = {"" = "src"}
